rbx-dom/rbx_binary/src/tests/snapshots/rbx_binary__tests__util__three-uigridlayouts__input.snap
---
source: rbx-dom/rbx_binary/src/tests/util.rs
expression: text_decoded
---
num_types: 1
num_instances: 3
chunks:
  - Meta:
      entries:
        - - ExplicitAutoJoints
          - "true"
  - Inst:
      type_id: 0
      type_name: UIGridLayout
      object_format: 0
      referents:
        - 0
        - 1
        - 2
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: CellPadding
      prop_type: UDim2
      values:
        - - - 0
            - 0
          - - -0.1
            - 100
        - - - 0.4
            - -500
          - - -0.5
            - 600
        - - - 0.8
            - -200
          - - -0.9
            - 250
  - Prop:
      type_id: 0
      prop_name: CellSize
      prop_type: UDim2
      values:
        - - - 0.2
            - -150
          - - -0.3
            - 300
        - - - 0.6
            - -1200
          - - -0.7
            - 1000
        - - - 1
            - -300
          - - -1.1
            - 1200
  - Prop:
      type_id: 0
      prop_name: FillDirection
      prop_type: Enum
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: FillDirectionMaxCells
      prop_type: Int32
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: HorizontalAlignment
      prop_type: Enum
      values:
        - 1
        - 1
        - 1
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - UIGridLayout
        - UIGridLayout
        - UIGridLayout
  - Prop:
      type_id: 0
      prop_name: SortOrder
      prop_type: Enum
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: StartCorner
      prop_type: Enum
      values:
        - 0
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: VerticalAlignment
      prop_type: Enum
      values:
        - 1
        - 1
        - 1
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
        - - 1
          - -1
        - - 2
          - -1
  - End
